--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -1,49 +1,83 @@
-body{
-    background-color: grey;
-    font-family: Arial, serif;
+* {
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-h1{
-    text-align: center;
-    font-size: 50px;
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 1em;
 }
 
-.form{
-    margin: auto;
-    width:50%;
-
-}
-
-.form > div{
-     display: inline-block;
-    border: 1px solid black;
-    height: 200px;
-    width:200px;
-}
-
-.adminForm{
-    float: right;
-}
-
-.userForm{
-    float: left;
-}
-
-.form p{
+header h1 {
+    margin: 0;
     text-align: center;
 }
 
-.input{
-    text-align: center;
-}
-
-h2{
-    text-align: center;
-}
-
-.form .button{
+main {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
+.form {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.userForm,
+.adminForm {
+    width: 100%;
+    margin: 1em 0;
+}
+
+.userForm h2,
+.adminForm h2 {
+    text-align: center;
+    margin: 0.5em 0;
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input p {
+    margin: 0.5em 0;
+    text-align: left;
+}
+
+.input input {
+    width: 80%;
+    padding: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 0.5em;
+    font-size: 1em;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1em 0;
+}
+
+button {
+    padding: 1em 2em;
+    border: none;
+    border-radius: 0.5em;
+    background-color: #0077c9;
+    color: #fff;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #005da3;
+}
