--- a/src/main/resources/templates/fieldsList.html
+++ b/src/main/resources/templates/fieldsList.html
@@ -13,9 +13,9 @@
 <main>
     <div class="list">
         <ul class="myUL" th:remove="all-but-first">
-            <li th:each="job: ${jobs}">
-                <a th:href= "@{/fieldsList}">
-                    <button class="button" th:text="${job}">
+            <li>
+                <a href="#">
+                    <button class="button">
                         Job 1
                     </button>
                 </a>
