Database changelogs and trying to connect tables

--- a/src/main/resources/templates/fieldsList.html
+++ b/src/main/resources/templates/fieldsList.html
@@ -3,12 +3,12 @@
       xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Job list</title>
+    <title>Fields list</title>
     <link rel="stylesheet" href="../static/styles/jobListStyles.css" th:href="@{styles/jobListStyles.css}">
 </head>
 <body>
 <header>
-<h1>Choose job</h1>
+<h1>Choose field</h1>
 </header>
 <main>
     <div class="list">
