ManyToOne relation between jobCycle and employee

--- a/src/main/resources/templates/jobList.html
+++ b/src/main/resources/templates/jobList.html
@@ -28,6 +28,7 @@
                 </a>
             </li>
         </ul>
+            <button class="einde-werk">Einde werk</button>
     </div>
 </main>
 <footer>
