--- a/src/main/resources/static/styles/jobListStyles.css
+++ b/src/main/resources/static/styles/jobListStyles.css
@@ -57,4 +57,20 @@ a{
     text-decoration: none;
 }
 
+.einde-werk{
+    display: block;
+    width: 100%;
+    padding: 1em 2em;
+    border: none;
+    border-radius: 0.5em;
+    background-color: red;
+    color: #fff;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+.einde-werk:hover{
+    background-color: #005da3;
+}
+
 
