DB SCHEMA, data insertion, User+UserRole classes

--- a/src/main/resources/templates/helloPage.html
+++ b/src/main/resources/templates/helloPage.html
@@ -6,7 +6,7 @@
 <body>
 <div class="hello">Hello employee</div>
 <div class="center">
-  <a href="/loginPage"><button>Arbeit macht frei</button></a>
+  <a href="/loginPage"><button>Click here to start</button></a>
 </div>
 </body>
 </html>
