--- a/src/main/resources/templates/jobList.html
+++ b/src/main/resources/templates/jobList.html
@@ -30,7 +30,11 @@
                 </a>
             </li>
         </ul>
-            <button class="einde-werk">Einde werk</button>
+        <form th:action="@{/end}" method="post">
+            <button class="einde-werk" >
+                Einde werk
+            </button>
+        </form>
     </div>
 </main>
 <footer>
