SecurityCondig class problem fixing + css styles fixing

--- a/src/main/resources/templates/helloPage.html
+++ b/src/main/resources/templates/helloPage.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">
 <head>
   <link rel="stylesheet" href="../static/styles/helloPageStyles.css" th:href="@{styles/helloPageStyles.css}">
   <title>Hello page</title>
