ChoicePage + security config settings

--- a/src/main/resources/templates/helloPage.html
+++ b/src/main/resources/templates/helloPage.html
@@ -4,9 +4,9 @@
   <title>Hello page</title>
 </head>
 <body>
-<div class="hello">Hello employee</div>
+<div class="hello">Hello!</div>
 <div class="center">
-  <a href="/loginPage"><button>Click here to start</button></a>
+  <a th:href="@{/choice}"><button>Click here to start</button></a>
 </div>
 </body>
 </html>
