--- a/src/main/resources/templates/jobEndPage.html
+++ b/src/main/resources/templates/jobEndPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Einde Werk</title>
@@ -15,11 +15,13 @@
       padding: 20px;
       color:white;
     }
+
   </style>
 </head>
 <body>
 <h1 th:text="|Job: ${jobName} finished at: ${time}|">
   Job: job1 finished at: 12:00:11
 </h1>
+
 </body>
 </html>
