--- a/src/main/resources/templates/login-form.html
+++ b/src/main/resources/templates/login-form.html
@@ -18,7 +18,7 @@
                     <p>Login</p>
                     <input type="text" name="username" placeholder="Enter your username">
                     <p>Password</p>
-                    <input type="text" name="password" placeholder="Enter your password">
+                    <input type="password" name="password" placeholder="Enter your password">
                     <div class="button">
                         <button type="submit">Log in</button>
                     </div>
