Error pages and css changes

--- a/src/main/resources/static/styles/startPageStyles.css
+++ b/src/main/resources/static/styles/startPageStyles.css
@@ -19,7 +19,8 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
+    font-size: 32px;
 }
 
 a {
