--- a/src/main/resources/templates/choice-page.html
+++ b/src/main/resources/templates/choice-page.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div class="employee">
-  <a th:href="@{/jobList}">Log in as employee</a>
+  <a th:href="@{/jobList}">Log in as an employee</a>
 </div>
 <div class="admin">
   <a th:href="@{/adminsPanel}">Log in as admin</a>
