--- a/src/main/resources/templates/helloPage.html
+++ b/src/main/resources/templates/helloPage.html
@@ -4,7 +4,7 @@
   <title>Hello page</title>
 </head>
 <body>
-<div class="hello">Hello!</div>
+<div class="hello"><span class="plant">Plant</span><span class="pro">Pro</span></div>
 <div class="center">
   <a th:href="@{/choice}"><button>Click here to start</button></a>
 </div>
