--- a/src/main/resources/static/styles/choicePageStyles.css
+++ b/src/main/resources/static/styles/choicePageStyles.css
@@ -1,4 +1,5 @@
 body {
+    font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,18 +12,19 @@ body {
     justify-content: center;
 }
 
-form {
-    display: flex;
-    justify-content: center;
-}
 
 a {
-    padding: 10px 20px;
-    background-color: lightgray;
+    padding: 40px 80px;
+    background-color: green;
     border: none;
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
     text-decoration: none;
-    color: black;
+    color: white;
 }
+
+a:hover{
+  opacity: 0.5;
+}
+
