--- a/src/main/resources/static/styles/helloPageStyles.css
+++ b/src/main/resources/static/styles/helloPageStyles.css
@@ -23,14 +23,14 @@ button {
     padding: 2em 3em;
     border: none;
     border-radius: 0.5em;
-    background-color: #0077c9;
+    background-color: green;
     color: #fff;
     font-size: 1em;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #005da3;
+    opacity: 0.8;
 }
 
 a{
@@ -39,6 +39,14 @@ a{
     font-family: Arial,sans-serif;
     font-weight: bold;
     color: white;
+}
+
+.plant{
+    color:red;
+}
+
+.pro{
+    color:green;
 }
 
 
