Fixing PickResult error, making add employee option and few templates

--- a/src/main/resources/templates/adminsPanel.html
+++ b/src/main/resources/templates/adminsPanel.html
@@ -10,7 +10,7 @@
     <span class="plant">Plant</span><span class="pro">Pro</span>
 </div>
 <section class="manage">
-    <a href="">
+    <a th:href="@{/add}" >
         <div class="add">
             <p>ADD EMPLOYEE</p>
         </div>
