CascadeDelete = True in db schema + delete user panel logic

--- a/src/main/resources/templates/adminsPanel.html
+++ b/src/main/resources/templates/adminsPanel.html
@@ -15,7 +15,7 @@
             <p>ADD EMPLOYEE</p>
         </div>
     </a>
-    <a href="">
+    <a th:href="@{/delete}">
         <div class="delete">
             <p>DELETE EMPLOYEE</p>
         </div>
