Creating show all employees section in admin's panel

--- a/src/main/resources/templates/adminsPanel.html
+++ b/src/main/resources/templates/adminsPanel.html
@@ -22,7 +22,7 @@
     </a>
 </section>
 <section class="stats">
-    <a href="">
+    <a th:href="@{/showAll}">
         <div class="all">
             <p>SHOW ALL EMOPLOYEES</p>
         </div>
