--- a/src/main/resources/templates/employeeSalariesList.html
+++ b/src/main/resources/templates/employeeSalariesList.html
@@ -18,9 +18,9 @@
       <p> Name:  | Surname:  | Earned:  </p>
     </div>
     <ul class="myUL" th:remove="all-but-first">
-      <li th:each="employee: ${employeesList}">
+      <li th:each="salary: ${salariesList}">
         <div>
-          <p th:text="*{'Name: ' + employee.first_name + ' | Surname: ' + employee.last_name + ' |  Earned: ' + '?????'}">
+          <p th:text="*{'Name: ' + salary.getUser().getFirst_name() + ' | Surname: ' + salary.getUser().getLast_name() + ' |  Earned: ' + salary.getSalary_value()}">
             Dane 1
           </p>
         </div>
