--- a/src/main/resources/static/styles/adminsPanelStyles.css
+++ b/src/main/resources/static/styles/adminsPanelStyles.css
@@ -1,45 +1,67 @@
 body {
-    font-family: Arial, SansSerif, serif;
-    display: flex;
-    justify-content: space-around;
-}
-.manage, .stats {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-a {
+    font-family: Arial, sans-serif;
     text-decoration: none;
-    color: #000;
-}
-.add, .delete, .all, .salaries {
-    background-color: green;
-    padding: 20px;
-    color: white;
-    border-radius: 5px;
-    margin-top: 20px;
-    width: 200px;
-    text-align: center;
-}
-.add:hover, .delete:hover, .all:hover, .salaries:hover {
-    opacity: 0.5;
+    background-color: #f2f2f2;
 }
 
 .hello {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 5em;
-    font-weight: bold;
-    color: #333;
     text-align: center;
+    font-size: 60px;
+    margin-top: 50px;
+    color: green;
 }
 
-.plant{
-    color:red;
+.plant {
+    color: red;
 }
 
 .pro {
     color: green;
+}
+
+.manage, .stats {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+
+.add, .delete, .all, .salaries {
+    background-color: green;
+    border-radius: 50px;
+    padding: 20px;
+    text-align: center;
+    width: 200px;
+    height: 50%;
+    box-shadow: 2px 2px 5px gray;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.add:hover, .delete:hover, .all:hover, .salaries:hover {
+    transform: translateY(-5px);
+    box-shadow: 2px 7px 5px gray;
+}
+
+.logout {
+    text-align: center;
+    margin-top: 20px;
+}
+
+button {
+    background-color: red;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+button:hover {
+    background-color: green;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
