--- a/src/main/resources/static/styles/addEmployeeFormStyles.css
+++ b/src/main/resources/static/styles/addEmployeeFormStyles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: Arial, SansSerif, serif;
     display: flex;
@@ -22,15 +23,9 @@ label {
     margin-bottom: 0.5rem;
 }
 
-input[type="text"], input[type="email"], input[type="password"] {
-    width: 100%;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border: none;
-    border-radius: 0.5rem;
-    box-shadow: 0 0 10px #ccc;
-}
-
+input[type="text"],
+input[type="email"],
+input[type="password"],
 select {
     width: 100%;
     padding: 1rem;
@@ -38,7 +33,6 @@ select {
     border: none;
     border-radius: 0.5rem;
     box-shadow: 0 0 10px #ccc;
-    background-color: #fff;
 }
 
 input[type="submit"] {
@@ -54,4 +48,36 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background-color: green;
+}
+
+@media (max-width: 768px) {
+    form {
+        width: 80%;
+        height: 80%;
+    }
+}
+
+@media (max-width: 576px) {
+    form {
+        width: 90%;
+        height: 90%;
+
+    }
+}
+
+@media (max-width: 480px) {
+    label {
+        font-size: 1rem;
+    }
+
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    select {
+        font-size: 0.8rem;
+    }
+
+    input[type="submit"] {
+        font-size: 1rem;
+    }
 }
