--- a/src/main/resources/templates/weightForm.html
+++ b/src/main/resources/templates/weightForm.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">>
 <head>
     <title>Weight form</title>
     <link rel="stylesheet" href="/static/styles/weightFormStyles.css" th:href="@{/styles/weightFormStyles.css}">
 </head>
 <body>
 <div class="form-container">
-    <form method="post" action="/weight">
+    <form method="post" action="/weight" th:action="@{/weight}">
         <label for="double-value">Weight in kilograms:</label>
         <input type="number" step="0.01" id="double-value" name="weight" required />
         <button type="submit">Submit</button>
