--- a/src/main/resources/templates/barGraph.html
+++ b/src/main/resources/templates/barGraph.html
@@ -1,153 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Chart</title>
-    <style>
-        .highcharts-figure,
-        .highcharts-data-table table {
-            min-width: 310px;
-            max-width: 800px;
-            margin: 1em auto;
-        }
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 
-        /* Add styles for the chart container */
-        #container {
-            height: 400px;
-        }
+    <!-- Optional theme -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" />
 
-        .highcharts-tooltip h3 {
-            margin: 0.3em 0;
-        }
-
-        .highcharts-data-table table {
-            font-family: Verdana, sans-serif;
-            border-collapse: collapse;
-            border: 1px solid #ebebeb;
-            margin: 10px auto;
-            text-align: center;
-            width: 100%;
-            max-width: 500px;
-        }
-
-        .highcharts-data-table caption {
-            padding: 1em 0;
-            font-size: 1.2em;
-            color: #555;
-        }
-
-        .highcharts-data-table th {
-            font-weight: 600;
-            padding: 0.5em;
-        }
-
-        .highcharts-data-table td,
-        .highcharts-data-table th,
-        .highcharts-data-table caption {
-            padding: 0.5em;
-        }
-
-        .highcharts-data-table thead tr,
-        .highcharts-data-table tr:nth-child(even) {
-            background: #f8f8f8;
-        }
-
-        .highcharts-data-table tr:hover {
-            background: #f1f7ff;
-        }
-    </style>
 </head>
 <body>
+<div class="container">
+    <h2 align="center">Employee salaries graph</h2>
+
+    <div id="container"
+         style="width: 850px; height:550px; margin: 0 auto"></div>
+</div>
+<script
+        src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/highcharts-more.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
-<figure class="highcharts-figure">
-    <div id="container"></div>
-</figure>
-
-<script>
-    Highcharts.chart('container', {
-
-        chart: {
-            type: 'bubble',
-            plotBorderWidth: 1,
-            zoomType: 'xy'
-        },
-
-        legend: {
-            enabled: false
-        },
-
-        title: {
-            text: 'Hours to kilograms ratio'
-        },
-
-        accessibility: {
-            point: {
-                valueDescriptionFormat: '{index}. {point.name}, fat: {point.x}g'
-            }
-        },
-
-        xAxis: {
+<script th:inline="javascript">
+    $(function(){
+        Highcharts.chart('container', {
+            chart: {
+                type: 'column'
+            },
             title: {
-                text: 'Picking hours'
-            }
-
-        },
-
-        yAxis: {
-            title: {
-                text: 'Kilograms picked'
-            }
-
-        },
-
-
-        tooltip: {
-            useHTML: true,
-            headerFormat: '<table>',
-            pointFormat: '<tr><th colspan="2" ><h3> ID: {point.id}</h3></th></tr>' +
-                '<tr><th>ID: </th><td>{point.x}g</td></tr>' +
-                '<tr><th>Sugar intake:</th><td>{point.y}g</td></tr>'
-                ,
-            footerFormat: '</table>',
-            followPointer: true
-        },
-
-        plotOptions: {
-            series: {
-                dataLabels: {
-                    enabled: true,
-                    format: '{point.name}'
+                text: 'Employee salaries'
+            },
+            subtitle: {
+                text: "Each column represents each employee's salary"
+            },
+            xAxis: {
+                categories: [[${surveyMap.keySet()}]],
+                crosshair: true
+            },
+            yAxis: {
+                min: 0,
+                max:500,
+                title: {
+                    text: 'Money to pay [in €]'
                 }
-            }
-        },
-
-        series: [{
-            data: [
-                { x: 95, y: 95, name: 'BE', id: 'Belgium' },
-                { x: 86.5, y: 102.9, name: 'DE', id: 'Germany' },
-                { x: 80.8, y: 91.5,  name: 'FI', id: 'Finland' },
-                { x: 80.4, y: 102.5,  name: 'NL', id: 'Netherlands' },
-                { x: 80.3, y: 86.1,  name: 'SE', id: 'Sweden' },
-                { x: 78.4, y: 70.1,  name: 'ES', id: 'Spain' },
-                { x: 74.2, y: 68.5,  name: 'FR', id: 'France' },
-                { x: 73.5, y: 83.1,  name: 'NO', id: 'Norway' },
-                { x: 71, y: 93.2,   name: 'UK', id: 'United Kingdom' },
-                { x: 69.2, y: 57.6,  name: 'IT', id: 'Italy' },
-                { x: 68.6, y: 20,  name: 'RU', id: 'Russia' },
-                { x: 65.5, y: 126.4,  name: 'US', id: 'United States' },
-                { x: 65.4, y: 50.8,  name: 'HU', id: 'Hungary' },
-                { x: 63.4, y: 51.8,  name: 'PT', id: 'Portugal' },
-                { x: 64, y: 82.9,  name: 'NZ', id: 'New Zealand' }
-            ],
-            colorByPoint: true
-        }]
-
+            },
+            tooltip: {
+                headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+                pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+                    '<td style="padding:0"><b>{point.y:.1f} </b></td></tr>',
+                footerFormat: '</table>',
+                shared: true,
+                useHTML: true
+            },
+            plotOptions: {
+                column: {
+                    pointPadding: 0.2,
+                    borderWidth: 0
+                }
+            },
+            series: [{
+                name: 'Salary',
+                data: [[${surveyMap.values()}]]
+            }]
+        });
     });
 </script>
+
 </body>
 </html>
