--- a/src/main/resources/templates/scatteredChart.html
+++ b/src/main/resources/templates/scatteredChart.html
@@ -70,6 +70,7 @@
 
 <script th:inline="javascript">
     let dataPoints = JSON.parse(/*[[${dataPoints}]]*/ '[]');
+    let fruit = /*[[${fruit}]]*/ '';
 
     // create chart
     Highcharts.chart('container', {
@@ -82,7 +83,7 @@
             enabled: false
         },
         title: {
-            text: 'Hours to kilograms ratio'
+            text: 'Hours to kilograms ratio ' + fruit
         },
         xAxis: {
             title: {
