Changed 'einde werk' to 'end work'

--- a/src/main/resources/templates/jobList.html
+++ b/src/main/resources/templates/jobList.html
@@ -31,7 +31,7 @@
         <div th:if="${jobCycle != null}">
             <form th:action="@{/endWork}" method="post">
                 <button class="einde-werk" >
-                    Einde werk
+                    End work
                 </button>
             </form>
         </div>
