--- a/src/main/resources/templates/landingPage.html
+++ b/src/main/resources/templates/landingPage.html
@@ -17,7 +17,7 @@
 
 <body >
     <!-- First Section -->
-    <section class="welcome-container" id="welcome">
+    <section class="welcome-container" id="welcome"  style="background-image: url('/images/BGImage.png');">
 
         <div class="navbar">
             <div class="logo">
@@ -106,7 +106,7 @@
     </section>
 
     <!--Forth Section-->
-    <section class="contact-us" id="contactChapter">
+    <section class="contact-us" id="contactChapter" style="background-image: url('/images/BGContact.png');">
         <h2>Contact Us</h2>
 
         <div class="contact-row">
