--- a/src/main/resources/templates/landingPage.html
+++ b/src/main/resources/templates/landingPage.html
@@ -48,27 +48,27 @@
             We are delivering highly available and easy to use software</p>
         <div class="team-images">
             <div class="profile">
-                <img class="profile-image" src="../static/images/sadZaba.png"  th:src="@{/images/sadZaba.png}" alt="Jan's picture">
+                <img class="profile-image" src="../static/images/mlodyJan.jpg"  th:src="@{/images/mlodyJan.jpg}" alt="Jan's picture">
                 <h3>Jan Rapacz</h3>
                 <p><em>Graphic Designer</em></p>
             </div>
             <div class="profile">
-                <img class="profile-image" src="../static/images/sadZaba.png" th:src="@{/images/sadZaba.png}" alt="Jacobs's picture">
+                <img class="profile-image" src="../static/images/mlodyJakub.jpg" th:src="@{/images/mlodyJakub.jpg}" alt="Jacobs's picture">
                 <h3>Jakub Opiełka</h3>
                 <p><em>Leader</em></p>
             </div>
             <div class="profile">
-                <img class="profile-image" src="../static/images/sadZaba.png" th:src="@{/images/sadZaba.png}" alt="Pawel's picture">
+                <img class="profile-image" src="../static/images/mlodyDyzioq.jpg" th:src="@{/images/mlodyDyzioq.jpg}" alt="Pawel's picture">
                 <h3>Paweł Dyśko</h3>
                 <p><em>Frontend Developer</em></p>
             </div>
             <div class="profile">
-                <img class="profile-image" src="../static/images/sadZaba.png" th:src="@{/images/sadZaba.png}" alt="Michal's picture">
+                <img class="profile-image" src="../static/images/mlodyMichal.jpg" th:src="@{/images/mlodyMichal.jpg}" alt="Michal's picture">
                 <h3>Michał Moryc</h3>
                 <p><em>Backend Developer</em></p>
             </div>
             <div class="profile">
-                <img class="profile-image" src="../static/images/sadZaba.png" th:src="@{/images/sadZaba.png}" alt="Marcin's picture">
+                <img class="profile-image" src="../static/images/mlodyMarcin.jpg" th:src="@{/images/mlodyMarcin.jpg}" alt="Marcin's picture">
                 <h3>Marcin Hajdecki</h3>
                 <p><em>QA Tester</em></p>
             </div>
